finish comparison between knn e least squares

--- a/least_squares.ipynb
+++ b/least_squares.ipynb
@@ -238,12 +238,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 61,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.041666666666666664"
+      ]
+     },
+     "execution_count": 61,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "from sklearn import neighbors\n",
-    "clf = neighbors.KNeighborsClassifier(10)"
+    "from sklearn.neighbors import KNeighborsRegressor\n",
+    "# variar o numero de k/ no momento k = 10\n",
+    "clf = neighbors.KNeighborsRegressor(10)\n",
+    "neigh = KNeighborsRegressor(n_neighbors=2)\n",
+    "neigh.fit(X_train, Y_train)\n",
+    "iris_pred_knn = neigh.predict(X_test)\n",
+    "mean_squared_error(iris_pred_knn, Y_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.9370805369127517"
+      ]
+     },
+     "execution_count": 62,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "r2_score(Y_test, iris_pred_knn)"
    ]
   },
   {
@@ -251,7 +287,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# TODO tentar implementar a visualizacao dos dados"
+   ]
   }
  ],
  "metadata": {
