add coments in least squares file

--- a/least_squares.ipynb
+++ b/least_squares.ipynb
@@ -1,19 +1,41 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Projeto de Minimos Quadrados \n",
+    "\n",
+    "O projeto consiste em utilizar o metodo de minimos quadrados para regressão com objetivo de observar o desempenho do metodo para a aplicacao. Para fazer esta analise, o MMQ sera comparado com o algoritmo KNN de regressao. \n",
+    "\n",
+    "Neste Projeto, sera utilziado o dataset Iris e para a avaliacao de ambos os metodos o erro medio quadrado e o r2score. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Imports"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
+    "\n",
+    "# ML imports\n",
     "import sklearn \n",
-    "from sklearn import metrics\n",
-    "from sklearn.model_selection import train_test_split\n",
     "from sklearn.metrics import mean_squared_error, r2_score\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.neighbors import KNeighborsRegressor\n",
+    "from sklearn import metrics\n",
     "from sklearn import linear_model\n",
     "from sklearn.datasets import load_iris\n",
+    "\n",
     "# plot imports\n",
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
@@ -22,108 +44,39 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Processamento da base de dados "
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "iris = load_iris()\n",
+    "\n",
     "X = iris.data\n",
-    "Y = iris.target\n"
+    "Y = iris.target\n",
+    "\n",
+    "iris.DESCR"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Iris Plants Database\n",
-      "====================\n",
-      "\n",
-      "Notes\n",
-      "-----\n",
-      "Data Set Characteristics:\n",
-      "    :Number of Instances: 150 (50 in each of three classes)\n",
-      "    :Number of Attributes: 4 numeric, predictive attributes and the class\n",
-      "    :Attribute Information:\n",
-      "        - sepal length in cm\n",
-      "        - sepal width in cm\n",
-      "        - petal length in cm\n",
-      "        - petal width in cm\n",
-      "        - class:\n",
-      "                - Iris-Setosa\n",
-      "                - Iris-Versicolour\n",
-      "                - Iris-Virginica\n",
-      "    :Summary Statistics:\n",
-      "\n",
-      "    ============== ==== ==== ======= ===== ====================\n",
-      "                    Min  Max   Mean    SD   Class Correlation\n",
-      "    ============== ==== ==== ======= ===== ====================\n",
-      "    sepal length:   4.3  7.9   5.84   0.83    0.7826\n",
-      "    sepal width:    2.0  4.4   3.05   0.43   -0.4194\n",
-      "    petal length:   1.0  6.9   3.76   1.76    0.9490  (high!)\n",
-      "    petal width:    0.1  2.5   1.20  0.76     0.9565  (high!)\n",
-      "    ============== ==== ==== ======= ===== ====================\n",
-      "\n",
-      "    :Missing Attribute Values: None\n",
-      "    :Class Distribution: 33.3% for each of 3 classes.\n",
-      "    :Creator: R.A. Fisher\n",
-      "    :Donor: Michael Marshall (MARSHALL%PLU@io.arc.nasa.gov)\n",
-      "    :Date: July, 1988\n",
-      "\n",
-      "This is a copy of UCI ML iris datasets.\n",
-      "http://archive.ics.uci.edu/ml/datasets/Iris\n",
-      "\n",
-      "The famous Iris database, first used by Sir R.A Fisher\n",
-      "\n",
-      "This is perhaps the best known database to be found in the\n",
-      "pattern recognition literature.  Fisher's paper is a classic in the field and\n",
-      "is referenced frequently to this day.  (See Duda & Hart, for example.)  The\n",
-      "data set contains 3 classes of 50 instances each, where each class refers to a\n",
-      "type of iris plant.  One class is linearly separable from the other 2; the\n",
-      "latter are NOT linearly separable from each other.\n",
-      "\n",
-      "References\n",
-      "----------\n",
-      "   - Fisher,R.A. \"The use of multiple measurements in taxonomic problems\"\n",
-      "     Annual Eugenics, 7, Part II, 179-188 (1936); also in \"Contributions to\n",
-      "     Mathematical Statistics\" (John Wiley, NY, 1950).\n",
-      "   - Duda,R.O., & Hart,P.E. (1973) Pattern Classification and Scene Analysis.\n",
-      "     (Q327.D83) John Wiley & Sons.  ISBN 0-471-22361-1.  See page 218.\n",
-      "   - Dasarathy, B.V. (1980) \"Nosing Around the Neighborhood: A New System\n",
-      "     Structure and Classification Rule for Recognition in Partially Exposed\n",
-      "     Environments\".  IEEE Transactions on Pattern Analysis and Machine\n",
-      "     Intelligence, Vol. PAMI-2, No. 1, 67-71.\n",
-      "   - Gates, G.W. (1972) \"The Reduced Nearest Neighbor Rule\".  IEEE Transactions\n",
-      "     on Information Theory, May 1972, 431-433.\n",
-      "   - See also: 1988 MLC Proceedings, 54-64.  Cheeseman et al\"s AUTOCLASS II\n",
-      "     conceptual clustering system finds 3 classes in the data.\n",
-      "   - Many, many more ...\n",
-      "\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(iris.DESCR)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "data = pd.DataFrame(X, columns=['sepal_length', 'sepal_width', 'petal_length', 'petal_width'])\n",
-    "target = pd.DataFrame(Y, columns=['Species'])\n"
+    "target = pd.DataFrame(Y, columns=['Species'])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -131,8 +84,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Visualizacao da distribuicao dos dados "
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -152,10 +112,10 @@
     {
      "data": {
       "text/plain": [
-       "<seaborn.axisgrid.PairGrid at 0x1a1a4fefd0>"
+       "<seaborn.axisgrid.PairGrid at 0x1a167f6080>"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -177,19 +137,46 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 30,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "reg = linear_model.LinearRegression()\n",
-    "X_train, X_test, Y_train, Y_test = train_test_split(data,target, test_size=0.4, random_state=3)\n",
-    "reg.fit (X_train, Y_train)\n"
+    "### Modelos de Predição \n",
+    "\n",
+    "A seguir sera realizado as comparações dos algorimos KNN e MMQ"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Metodo de Minimos Quadrados "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "LinearRegression(copy_X=True, fit_intercept=True, n_jobs=1, normalize=False)"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "reg = linear_model.LinearRegression()\n",
+    "X_train, X_test, Y_train, Y_test = train_test_split(data,target, test_size=0.4, random_state=3)\n",
+    "reg.fit (X_train, Y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -198,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -207,7 +194,7 @@
        "0.053326364840748416"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -218,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -227,7 +214,7 @@
        "0.9194736101398094"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -237,43 +224,77 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### KNN  "
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.041666666666666664"
+       "KNeighborsRegressor(algorithm='auto', leaf_size=30, metric='minkowski',\n",
+       "          metric_params=None, n_jobs=1, n_neighbors=15, p=2,\n",
+       "          weights='uniform')"
       ]
      },
-     "execution_count": 61,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "from sklearn.neighbors import KNeighborsRegressor\n",
     "# variar o numero de k/ no momento k = 10\n",
-    "clf = neighbors.KNeighborsRegressor(10)\n",
-    "neigh = KNeighborsRegressor(n_neighbors=2)\n",
-    "neigh.fit(X_train, Y_train)\n",
-    "iris_pred_knn = neigh.predict(X_test)\n",
-    "mean_squared_error(iris_pred_knn, Y_test)"
+    "neigh = KNeighborsRegressor(n_neighbors=15)\n",
+    "neigh.fit(X_train, Y_train)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "iris_pred_knn = neigh.predict(X_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.9370805369127517"
+       "0.039111111111111097"
       ]
      },
-     "execution_count": 62,
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mean_squared_error(iris_pred_knn, Y_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.9409395973154363"
+      ]
+     },
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -283,12 +304,96 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# TODO tentar implementar a visualizacao dos dados"
+    "#### Metodo alternativo do minimos quadrados "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "RidgeCV(alphas=[0.05, 0.025, 0.075, 0.1, 0.5, 1.0, 1.5, 2.0, 5.0, 7.0, 10.0],\n",
+       "    cv=11, fit_intercept=True, gcv_mode=None, normalize=False,\n",
+       "    scoring=None, store_cv_values=False)"
+      ]
+     },
+     "execution_count": 52,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "reg_2 = linear_model.RidgeCV(alphas=[0.05, 0.025,0.075 ,0.1, 0.5 ,1.0, 1.5, 2.0, 5.0, 7.0 ,10.0], cv=11)\n",
+    "reg_2.fit (X_train, Y_train) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.5"
+      ]
+     },
+     "execution_count": 57,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pred = reg_2.predict(X_test)\n",
+    "reg_2.alpha_"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.053511244832746135"
+      ]
+     },
+     "execution_count": 54,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mean_squared_error(pred, Y_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.9191944289438397"
+      ]
+     },
+     "execution_count": 55,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "r2_score(Y_test, pred)"
    ]
   }
  ],
